--- a/src/app/admin/template/sidemenu/sidemenu.component.html
+++ b/src/app/admin/template/sidemenu/sidemenu.component.html
@@ -9,25 +9,25 @@
             </a>
             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                 <nav class="sb-sidenav-menu-nested nav">
-                    <a class="nav-link" routerLink="/admin/gestiondeventas"><i class="fas fa-tasks"></i> Gestión de ventas</a>
-                    <a class="nav-link" routerLink="/admin/puntodeventa"><i class="fas fa-cash-register"></i> Punto de venta</a>
+                    <a class="nav-link" routerLink="/admin/gestiondeventas" routerLinkActive="active-link">
+                        <i class="fas fa-tasks"></i> Gestión de ventas
+                    </a>
+                    <a class="nav-link" routerLink="/admin/puntodeventa" routerLinkActive="active-link">
+                        <i class="fas fa-cash-register"></i> Punto de venta
+                    </a>
                 </nav>
             </div>
-            <a class="nav-link" routerLink="productos">
+            <a class="nav-link" routerLink="productos" routerLinkActive="active-link">
                 <div class="sb-nav-link-icon"><i class="fas fa-box"></i></div>
                 Productos
             </a>
-            <a class="nav-link" routerLink="usuarios">
+            <a class="nav-link" routerLink="usuarios" routerLinkActive="active-link">
                 <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
                 Usuarios
             </a>
-            <a class="nav-link" routerLink="estadisticas">
+            <a class="nav-link" routerLink="estadisticas" routerLinkActive="active-link">
                 <div class="sb-nav-link-icon"><i class="fas fa-chart-bar"></i></div>
                 Estadísticas
-            </a>
-            <a class="nav-link" routerLink="historial">
-                <div class="sb-nav-link-icon"><i class="fas fa-history"></i></div>
-                Historial
             </a>
         </div>
     </div>
