--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -32,15 +32,22 @@
                                         <div *ngIf="form.get('password')?.dirty && form.get('password')?.invalid" class="feedback">
                                             <div *ngIf="form.get('password')?.errors?.['required']">La contraseña es requerida</div>
                                             <div *ngIf="form.get('password')?.errors?.['minlength']">La contraseña debe tener al menos 6 caracteres</div>
-                                            <div *ngIf="form.get('password')?.errors?.['maxlength']">La contraseña no puede tener más de 10 caracteres</div>
                                         </div>
                                     </div>
 
-                                    <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                                    <div class="d-grid gap-2">
                                         <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Ingresar</button>
                                     </div>
-
                                 </form>
+                                <div class="mt-3 text-center">
+                                    <div id="google-button"></div>
+                                    <!-- Aquí se renderiza el botón de Google -->
+
+                                    <p class="mt-3">
+                                        ¿No tienes cuenta?
+                                        <a routerLink="/register" class="text-primary">Regístrate aquí</a>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
