--- a/src/app/admin/pages/catalogos/dialogo-editar-usuario/dialogo-editar-usuario.component.html
+++ b/src/app/admin/pages/catalogos/dialogo-editar-usuario/dialogo-editar-usuario.component.html
@@ -1,31 +1,69 @@
-<form [formGroup]="usuarioForm" (ngSubmit)="onSave()">
-  <mat-form-field>
-    <mat-label>Nombre</mat-label>
-    <input matInput formControlName="nombre" required>
-  </mat-form-field>
+<form [formGroup]="usuarioForm" (ngSubmit)="onSave()" class="form-container">
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Nombre</mat-label>
+      <input matInput formControlName="nombre" required>
+      <mat-error *ngIf="usuarioForm.get('nombre')?.hasError('required')">
+        Nombre es requerido
+      </mat-error>
+    </mat-form-field>
+  </div>
 
-  <mat-form-field>
-    <mat-label>Correo</mat-label>
-    <input matInput formControlName="correo" required>
-  </mat-form-field>
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Apellidos</mat-label>
+      <input matInput formControlName="apellidos" required>
+      <mat-error *ngIf="usuarioForm.get('apellidos')?.hasError('required')">
+        Apellidos son requeridos
+      </mat-error>
+    </mat-form-field>
+  </div>
 
-  <mat-form-field>
-    <mat-label>Teléfono</mat-label>
-    <input matInput formControlName="telefono" required>
-  </mat-form-field>
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Correo</mat-label>
+      <input matInput formControlName="correo" required type="email">
+      <mat-error *ngIf="usuarioForm.get('correo')?.hasError('required')">
+        Correo es requerido
+      </mat-error>
+      <mat-error *ngIf="usuarioForm.get('correo')?.hasError('email')">
+        Ingrese un correo válido
+      </mat-error>
+    </mat-form-field>
+  </div>
 
-  <mat-form-field>
-    <mat-label>Dirección</mat-label>
-    <input matInput formControlName="direccion" required>
-  </mat-form-field>
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Teléfono</mat-label>
+      <input matInput formControlName="telefono" required>
+      <mat-error *ngIf="usuarioForm.get('telefono')?.hasError('required')">
+        Teléfono es requerido
+      </mat-error>
+    </mat-form-field>
+  </div>
 
-  <mat-form-field>
-    <mat-label>Rol</mat-label>
-    <input matInput formControlName="rol" required>
-  </mat-form-field>
+  <div class="form-group">
+    <mat-form-field>
+      <mat-label>Rol</mat-label>
+      <select matNativeControl formControlName="rol" required>
+        <option value="" disabled>Seleccione un rol</option>
+        <option *ngFor="let rol of rolesDisponibles" [value]="rol.nombre">
+          {{ rol.nombre }}
+        </option>
+      </select>
+      <mat-error *ngIf="usuarioForm.get('rol')?.hasError('required')">
+        Rol es requerido
+      </mat-error>
+    </mat-form-field>
+  </div>
 
-  <div class="buttons">
-    <button mat-button (click)="onCancel()">Cancelar</button>
-    <button mat-raised-button color="primary" type="submit">Guardar</button>
+  <div class="form-actions">
+    <button mat-button type="button" (click)="onCancel()">Cancelar</button>
+    <button mat-raised-button 
+            color="primary" 
+            type="submit"
+            [disabled]="usuarioForm.invalid">
+      Guardar
+    </button>
   </div>
 </form>
