fix: solucionar registro de usuario y recargar de tabla

--- a/src/app/admin/pages/catalogos/usuario/usuario.component.html
+++ b/src/app/admin/pages/catalogos/usuario/usuario.component.html
@@ -27,7 +27,7 @@
                     <td>{{ usuario.apellidos }}</td>
                     <td>{{ usuario.correo }}</td>
                     <td>{{ usuario.telefono }}</td>
-                    <td>{{ usuario.rol }}</td>
+                    <td>{{ usuario.rol_nombre || 'NULL' }}  </td>
                     <td>
                         <div class="btn-group btn-group-sm acciones">
                             <button class="btn btn-primary" (click)="editarUsuario(usuario)">
