--- a/src/app/admin/pages/catalogos/productos/productos.component.html
+++ b/src/app/admin/pages/catalogos/productos/productos.component.html
@@ -1,10 +1,6 @@
 <div class="productos-container">
-  <div class="header">
-    <h2>Administrar Catálogo</h2>
-  </div>
-
   <div class="mt-3">
-    <h3>Productos</h3>
+    <h3>Adminstrar Productos</h3>
     <div class="actions">
       <button (click)="openAddModal()" class="btn btn-success">
         <i class="fas fa-plus"></i> Añadir
