:boom: fix: Revirtiendo cambios de landig

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -50,7 +50,7 @@
                     <!-- Si el usuario NO está autenticado, mostrar el botón de ingresar -->
                     <ng-template #ingresarLink>
                         <li class="nav-item">
-                            <a class="nav-link btn text-white px-3" style="background-color: #48c6ef;" [routerLink]="'/login'">Ingresar</a>
+                            <a class="nav-link btn text-white px-3" style="background-color: #48c6ef;" href="/login">Ingresar</a>
                         </li>
                     </ng-template>
                 </ul>
