fex: quitar curd proveedores

--- a/src/app/admin/template/sidemenu/sidemenu.component.html
+++ b/src/app/admin/template/sidemenu/sidemenu.component.html
@@ -27,9 +27,9 @@
                     <a class="nav-link" routerLink="productos" routerLinkActive="active-link">
                         <i class="fas fa-list"></i> Lista de Productos
                     </a>
-                    <a class="nav-link" routerLink="proveedores" routerLinkActive="active-link">
+                    <!--<a class="nav-link" routerLink="proveedores" routerLinkActive="active-link">
                         <i class="fas fa-truck"></i> Proveedores
-                    </a>
+                    </a> --> 
                     <a class="nav-link" routerLink="categorias" routerLinkActive="active-link">
                         <i class="fas fa-tags"></i> Categorías
                     </a>
